--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
+  tab-size: 2;
 
   color: var(--color-neutral-8);
   background-color: var(--color-neutral-2);
