--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
   line-height: 24px;
   tab-size: 2;
 
+  accent-color: var(--color-primary);
   color: var(--color-neutral-8);
   background-color: var(--color-neutral-2);
 }
