--- a/src/main.scss
+++ b/src/main.scss
@@ -48,7 +48,9 @@ button {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-button {
+a,
+button,
+details>summary {
   cursor: pointer;
 }
 
@@ -56,6 +58,7 @@ button:hover,
 button:focus {
   background-color: var(--color-primary-bright);
 }
+
 button:active {
   border-color: #396cd8;
   background-color: #e8e8e8;
