--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   tab-size: 2;
 
   accent-color: var(--color-primary);
