tweak selection colour

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,7 +13,7 @@
 }
 
 ::selection {
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-bright);
   color: var(--color-neutral-2);
 }
 
