--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "theme";
 @import "scrollbar";
 
@@ -10,12 +11,6 @@
   accent-color: var(--color-primary);
   color: var(--color-neutral-8);
   background-color: var(--color-neutral-2);
-}
-
-:root,
-body {
-  margin: 0;
-  padding: 0;
 }
 
 :root {
