--- a/src/main.scss
+++ b/src/main.scss
@@ -34,8 +34,8 @@ body {
 a {
   color: var(--color-primary);
   text-decoration: inherit;
-  will-change: background-color;
-  transition: background-color 0.1s;
+  will-change: color;
+  transition: color 0.1s;
 }
 
 a:hover,
