slightly better spinner style

--- a/src/Spinner.module.scss
+++ b/src/Spinner.module.scss
@@ -22,6 +22,20 @@
 	}
 }
 
+@mixin spinner {
+	content: '';
+	position: absolute;
+	inset: 0;
+	margin: auto;
+	display: block;
+	width: 1rem;
+	height: 1rem;
+	background: var(--color-primary);
+	border-radius: 50%;
+	will-change: transform;
+	animation: 0.6s spinner linear infinite both;
+}
+
 .container {
 	position: relative;
 }
@@ -36,26 +50,24 @@
 	will-change: transform;
 	animation: 1s rotate linear infinite;
 	pointer-events: none;
+	background: none;
+	border: none;
 
 	&::-webkit-progress-value {
 		display: none;
-		background: green;
 	}
 
 	&::after,
-	&::before,
+	&::before {
+		@include spinner;
+	}
+
+	&::-moz-progress-bar {
+		@include spinner;
+	}
+
 	&::-webkit-progress-bar {
-		content: '';
-		position: absolute;
-		inset: 0;
-		margin: auto;
-		display: block;
-		width: 1rem;
-		height: 1rem;
-		background: var(--color-primary);
-		border-radius: 50%;
-		will-change: transform;
-		animation: 0.6s spinner linear infinite both;
+		@include spinner;
 	}
 
 	&::after {
@@ -67,6 +79,11 @@
 	}
 
 	&::-webkit-progress-bar {
+		animation-delay: 0.5s;
+		top: 0.25rem;
+	}
+
+	&::-moz-progress-bar {
 		animation-delay: 0.5s;
 		top: 0.25rem;
 	}
