--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -11,7 +11,13 @@ $sidebar: 5rem;
 	user-select: none;
 	cursor: default;
 
+	:global(.h) {
+		font-size: 200%;
+		margin-block: 0.5rem;
+	}
+
 	> nav {
+		font-size: 125%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
