--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -1,17 +1,12 @@
 @import '../node_modules/modern-normalize/modern-normalize.css';
 
-:root,
-body {
-  margin: 0;
-  padding: 0;
-}
-
 ul,
 ol {
 	padding: 0;
 	margin: 0;
 }
 
-* {
-	box-sizing: border-box;
+h1,h2,h3,h4,h5,h6 {
+	margin: 0;
+	font: inherit;
 }
