--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -1,5 +1,14 @@
 $sidebar: 5rem;
 
+@keyframes logo {
+	from {
+		transform: rotate(2turn) scale(1.25);
+	}
+	to {
+		transform: rotate(0) scale(0.9);
+	}
+}
+
 .header {
 	position: fixed;
 	top: 0;
@@ -12,8 +21,18 @@ $sidebar: 5rem;
 	cursor: default;
 
 	:global(.h) {
-		font-size: 200%;
+		font-size: 150%;
 		margin-block: 0.5rem;
+		>strong {
+			display: inline-block;
+		}
+
+		
+		&:active {
+			>strong {
+				animation: logo 0.5s ease-out both;
+			}
+		}
 	}
 
 	> nav {
