--- a/src/ViewSettings.module.scss
+++ b/src/ViewSettings.module.scss
@@ -1,10 +1,12 @@
 .about,
 .settings {
 	display: grid;
-	grid-template-columns: auto 1fr;
+	grid-template-columns: 5rem 1fr;
 	gap: 0.1rem 1rem;
 	> dt {
 		text-align: right;
+		margin-top: 0.25rem;
+		line-height: 1;
 
 		&::after {
 			content: ':';
