--- a/src/_scrollbar.scss
+++ b/src/_scrollbar.scss
@@ -1,7 +1,7 @@
 * {
   /* Firefox */
   scrollbar-width: thin;
-  scrollbar-color: var(--color-neutral-4) var(--color-neutral-2);
+  scrollbar-color: var(--color-neutral-4) rgb(var(--color-neutral-2-rgb) / 50%);
 
   /* Chrome, Edge, and Safari */
   &::-webkit-scrollbar {
@@ -10,11 +10,11 @@
   }
 
   &::-webkit-scrollbar-track {
-    background-color: var(--color-neutral-2);
+    background-color: rgb(var(--color-neutral-2-rgb) / 50%);
   }
 
   &::-webkit-scrollbar-corner {
-    background-color: var(--color-neutral-2);
+    background-color: rgb(var(--color-neutral-2-rgb) / 50%);
   }
 
   &::-webkit-scrollbar-thumb {
