--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,8 @@
   font-size: 16px;
   line-height: 1.5;
   tab-size: 2;
+  overflow: overlay;
+  scrollbar-gutter: stable;
 
   accent-color: var(--color-primary);
   color: var(--color-neutral-8);
