fix asset paths

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Bitch;
-  src: url("./Bitch.woff2") format("woff2");
+  src: url("/Bitch.woff2") format("woff2");
 }
 
 :root {
