shorter page numbers

--- a/src/PageNumbers.module.scss
+++ b/src/PageNumbers.module.scss
@@ -11,7 +11,7 @@
 	background: none!important;
 	color: var(--color-primary);
 	box-shadow: none;
-	padding-inline: 0;
+	padding: 0;
 	width: 2rem;
 
 	&:not(:disabled):hover,
