--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -17,12 +17,18 @@
 
 .controls {
 	flex: none;
+	position: relative;
 }
 
 .track {
+
+}
+
+.progress {
 	appearance: none;
 	cursor: pointer;
 	width: 100%;
+	height: 2rem;
 	border-radius: 0;
 
 	&::-webkit-progress-value {
@@ -40,5 +46,28 @@
 }
 
 .buttons {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.time {
+	font-family: 'Courier New', Courier, monospace;
+}
+
+.save {
+	margin-inline-start: auto;
 	position: relative;
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+.saving {
+	position: absolute;
+	top: unset;
+	left: unset;
+	right: 2rem;
+	bottom: calc(100%);
 }
