--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -12,3 +12,12 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0;
 	font: inherit;
 }
+
+button {
+	appearance: none;
+	background: none;
+	border: none;
+	padding: 0;
+	font: inherit;
+	color: inherit;
+}
