--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -20,11 +20,13 @@
 	position: relative;
 }
 
-.track {
-
+.trackbar {
+	position: relative;
+	contain: layout;
 }
 
 .progress {
+	display: block;
 	appearance: none;
 	cursor: pointer;
 	width: 100%;
@@ -32,7 +34,7 @@
 	border-radius: 0;
 
 	&::-webkit-progress-value {
-		background-color: rgb(var(--color-primary-rgb) / 25%);
+		background-color: rgb(var(--color-primary-rgb) / 50%);
 		border-right: solid 2px var(--color-primary-bright);
 	}
 
@@ -43,6 +45,51 @@
 	&::-moz-progress-bar {
 		background: var(--color-black);
 	}
+}
+
+.clip {
+	color: var(--color-primary-bright);
+	border-top: solid 0.2rem var(--color-primary-bright);
+	background-color: rgb(var(--color-primary-muted-rgb) / 75%);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0.75rem;
+	cursor: grab;
+	transition:
+		background-color 0.1s ease-out,
+		border-color 0.1s ease-out;
+
+	&:hover:not(:has(:hover)) {
+		color: var(--color-white);
+		border-top-color: var(--color-white);
+		background-color: rgb(var(--color-primary-muted-rgb) / 100%);
+	}
+}
+
+.start,
+.end {
+	position: absolute;
+	bottom: calc(100% - 0.5rem);
+	width: 3rem;
+	height: 1.5rem;
+	transition: color 0.1s ease-out;
+	&:hover {
+		color: var(--color-white);
+	}
+}
+
+.start {
+	left: 0;
+	transform: translateX(-50%);
+	cursor: w-resize;
+}
+
+.end {
+	left: 100%;
+	transform: translateX(-50%);
+	cursor: e-resize;
 }
 
 .buttons {
