--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -40,13 +40,15 @@ $sidebar: 4rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		> a {
+		> a,
+		> button {
 			text-align: center;
 			width: 100%;
 			min-height: 3rem;
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			color: var(--color-primary);
 			
 			&:global(.active) {
 				background-color: var(--color-neutral-2);
