--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -110,8 +110,9 @@
 
 .buttons {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
-	gap: 0.5rem;
+	gap: 0 0.5rem;
 
 	button {
 		min-width: 2rem;
