--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -49,10 +49,29 @@ $sidebar: 4rem;
 			align-items: center;
 			justify-content: center;
 			color: var(--color-primary);
+			position: relative;
 			
 			&:global(.active) {
 				background-color: var(--color-neutral-2);
 				color: var(--color-primary-bright);
+			}
+
+			&[data-count]:not([data-count="0"])::after {
+				content: attr(data-count);
+				position: absolute;
+				top: 0.25rem;
+				right: 0.25rem;
+				font-size: 80%;
+				color: var(--color-black);
+				background-color: var(--color-primary-bright);
+				border-radius: 50%;
+				width: 1rem;
+				height: 1rem;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-family: 'Courier New', Courier, monospace;
+				font-weight: bold;
 			}
 		}
 	}
