--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -66,8 +66,8 @@ $sidebar: 4rem;
 				top: 0.25rem;
 				right: 0.25rem;
 				font-size: 80%;
-				color: var(--color-black);
-				background-color: var(--color-primary-bright);
+				color: var(--color-neutral-9);
+				background-color: var(--color-neutral-0);
 				border-radius: 50%;
 				width: 1rem;
 				height: 1rem;
