zoom + center track

--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -130,6 +130,11 @@
 }
 
 .time {
+	margin-inline-end: 1rem;
+	font-family: 'Courier New', Courier, monospace;
+}
+
+.zoom {
 	font-family: 'Courier New', Courier, monospace;
 }
 
