--- a/src/Button.module.scss
+++ b/src/Button.module.scss
@@ -8,7 +8,7 @@
   background-color: var(--color-primary);
   will-change: background-color;
   transition: background-color 0.1s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px rgb(var(--color-black-rgb) / 20%);
 
   &:not(:disabled):hover,
   &:not(:disabled):focus-visible {
