--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -1,11 +1,11 @@
-$primary: hsl(322 70% 54%);
-$primary-bright: hsl(322 82% 70%);
-$primary-muted: hsl(322 20% 50%);
+$primary: hsl(322deg 70% 54%);
+$primary-bright: hsl(322deg 82% 70%);
+$primary-muted: hsl(322deg 20% 50%);
 $neutral-0: #000;
-$neutral-2: hsl(278 57% 5%);
-$neutral-4: hsl(289 35% 21%);
-$neutral-6: hsl(290 10% 53%);
-$neutral-8: hsl(300 11% 75%);
+$neutral-2: hsl(278deg 57% 5%);
+$neutral-4: hsl(289deg 35% 21%);
+$neutral-6: hsl(290deg 10% 53%);
+$neutral-8: hsl(300deg 11% 75%);
 $neutral-9: #FFF;
 $black: #000;
 $white: #FFF;
