--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $primary: hsl(322deg 70% 54%);
 $primary-bright: hsl(322deg 82% 70%);
 $primary-muted: hsl(322deg 20% 50%);
@@ -33,12 +35,12 @@ $white: #FFF;
 @mixin light() {
 	color-scheme: light;
 
-	--color-primary-rgb: #{rgbv(darken($primary, 20%))};
+	--color-primary-rgb: #{rgbv(color.adjust($primary, $lightness: -20%))};
 	--color-primary-bright-rgb: #{rgbv($primary-bright)};
 	--color-primary-muted-rgb: #{rgbv($primary-muted)};
 	--color-neutral-0-rgb: #{rgbv($neutral-9)};
-	--color-neutral-2-rgb: #{rgbv(lighten($neutral-8, 10%))};
-	--color-neutral-4-rgb: #{rgbv(lighten($neutral-6, 10%))};
+	--color-neutral-2-rgb: #{rgbv(color.adjust($neutral-8, $lightness: 10%))};
+	--color-neutral-4-rgb: #{rgbv(color.adjust($neutral-6, $lightness: 10%))};
 	--color-neutral-6-rgb: #{rgbv($neutral-4)};
 	--color-neutral-8-rgb: #{rgbv($neutral-2)};
 	--color-neutral-9-rgb: #{rgbv($neutral-0)};
