--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -26,23 +26,23 @@
 
 	/* Firefox */
 	scrollbar-color: var(--color-neutral-6) transparent;
-  
+
 	/* Chrome, Edge, and Safari */
 	&::-webkit-scrollbar {
-	  width: 0.25rem;
-	  height: 0.25rem;
+		width: 0.25rem;
+		height: 0.25rem;
 	}
-  
+
 	&::-webkit-scrollbar-track {
-	  background-color: transparent;
+		background-color: transparent;
 	}
-  
+
 	&::-webkit-scrollbar-corner {
-	  background-color: transparent;
+		background-color: transparent;
 	}
 
 	&::-webkit-scrollbar-thumb {
-	  background-color: var(--color-neutral-6);
+		background-color: var(--color-neutral-6);
 	}
 }
 
@@ -53,12 +53,10 @@
 	contain: layout;
 	width: 100%;
 	background-color: var(--color-black);
-	background-image: repeating-linear-gradient(
-		to right,
-		transparent,
-		transparent calc(5% - 2px),
-		rgb(var(--color-white-rgb) / 10%) 5%
-	  );
+	background-image: repeating-linear-gradient(to right,
+			transparent,
+			transparent calc(5% - 2px),
+			rgb(var(--color-white-rgb) / 10%) 5%);
 }
 
 .progress {
@@ -92,7 +90,7 @@
 	background-color: rgb(var(--color-primary-bright-rgb) / 25%);
 	pointer-events: none;
 
-	:not(:hover) > & {
+	:not(:hover)>& {
 		display: none;
 	}
 }
@@ -125,10 +123,6 @@
 	width: 3rem;
 	height: 1.5rem;
 	transition: color 0.1s ease-out;
-
-	&:hover {
-		color: var(--color-white);
-	}
 }
 
 .start {
@@ -141,6 +135,11 @@
 	left: 100%;
 	transform: translateX(-50%);
 	cursor: e-resize;
+}
+
+.start:hover,
+.end:hover {
+	color: var(--color-white);
 }
 
 .buttons {
