--- a/src/ViewVideos.module.scss
+++ b/src/ViewVideos.module.scss
@@ -33,11 +33,16 @@
 				inset: 0;
 				width: 100%;
 				height: 100%;
-				background-image: linear-gradient(to top, var(--color-black), rgb(var(--color-black-rgb) / 90%) 3rem, transparent);
+				background-image: linear-gradient(
+					to top,
+					var(--color-black),
+					rgb(var(--color-black-rgb) / 90%) 3rem,
+					transparent
+				);
 				will-change: opacity;
 				transition: opacity 0.1s ease-out;
 			}
-			
+
 			> span {
 				position: absolute;
 				bottom: 0;
@@ -47,7 +52,7 @@
 				z-index: 3;
 				padding-inline-end: 3rem;
 			}
-			
+
 			> button {
 				opacity: 0;
 				position: absolute;
@@ -82,11 +87,10 @@
 	}
 }
 
-
 .header {
 	display: flex;
 	flex-wrap: wrap;
-	gap:0.5rem;
+	gap: 0.5rem;
 	align-items: center;
 	justify-content: center;
 }
