--- a/src/_font.scss
+++ b/src/_font.scss
@@ -1,14 +1,14 @@
 @font-face {
 	font-family: Bitch;
-	src: url("/Bitch.woff2") format("woff2");
+	src: url('/Bitch.woff2') format('woff2');
 }
 
 :root {
-	&[data-font="Bitch"]>body {
+	&[data-font='Bitch'] > body {
 		font-family: Bitch, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	}
 
-	&[data-font="Boring"]>body {
+	&[data-font='Boring'] > body {
 		font-family: system-ui;
 	}
 }
