--- a/src/ViewRoot.module.scss
+++ b/src/ViewRoot.module.scss
@@ -37,6 +37,10 @@ $sidebar: 4rem;
 		&:active {
 			> strong {
 				animation: logo 0.5s ease-out both;
+
+				@media (prefers-reduced-motion) {
+					animation: none;
+				}
 			}
 		}
 	}
