--- a/src/main.scss
+++ b/src/main.scss
@@ -42,6 +42,13 @@ a {
 	transition: color 0.1s;
 }
 
+button,
+a {
+	svg {
+		pointer-events: none;
+	}
+}
+
 a,
 button,
 details > summary {
@@ -55,12 +62,6 @@ a:focus-visible {
 
 h1 {
 	text-align: center;
-}
-
-button {
-	svg {
-		pointer-events: none;
-	}
 }
 
 input:disabled,
