--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -34,10 +34,19 @@
 	}
 }
 
-.video {
-	cursor: pointer;
+.videocontainer {
+	width: 100%;
+	height: 100%;
+	position: relative;
 	min-height: 0;
 	flex: auto;
+	overflow: hidden;
+}
+
+.video {
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
 	background-color: var(--color-black);
 	object-fit: contain;
 	object-position: center;
@@ -69,6 +78,22 @@
 			justify-content: center;
 			align-items: center;
 		}
+	}
+}
+
+.crop {
+	position: absolute;
+	inset: 0;
+	margin: auto;
+	max-height: 100%;
+	background: rgb(var(--color-primary-muted-rgb) / 80%);
+	cursor: not-allowed;
+
+	&:not([data-w]),
+	&[data-w='0'],
+	&[data-h='0'] {
+		opacity: 0;
+		pointer-events: none;
 	}
 }
 
