--- a/src/ViewVideos.module.scss
+++ b/src/ViewVideos.module.scss
@@ -1,19 +1,26 @@
 .videos {
 	list-style: none;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+	grid-template-columns: 1fr;
 	gap: 0.25rem;
+
+	@media screen and (width > 20rem) {
+		grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+	}
 
 	> li {
 		> a {
 			display: block;
+			color: rgb(var(--color-white-rgb) / 80%);
 			width: 100%;
 			height: 100%;
-			color: rgb(var(--color-white-rgb) / 80%);
-			aspect-ratio: 16 / 9;
 			position: relative;
 			overflow: hidden;
 			contain: paint;
+
+			@media screen and (width > 20rem) {
+				aspect-ratio: 16 / 9;
+			}
 
 			> video {
 				z-index: 1;
@@ -44,13 +51,18 @@
 			}
 
 			> span {
-				position: absolute;
+				position: relative;
 				bottom: 0;
 				left: 0;
 				width: 100%;
 				padding: 0.5rem;
 				z-index: 3;
 				padding-inline-end: 3rem;
+				word-break: break-word;
+
+				@media screen and (width > 20rem) {
+					position: absolute;
+				}
 			}
 
 			> button {
@@ -131,6 +143,18 @@
 		background: none;
 		border: none;
 		outline: none;
+	}
+}
+
+.sortby {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.5rem;
+	align-items: center;
+	margin-inline-start: 1rem;
+
+	select {
+		padding: 0.25rem;
 	}
 }
 
