--- a/src/EditorHelp.module.scss
+++ b/src/EditorHelp.module.scss
@@ -9,7 +9,9 @@
 	border-bottom-right-radius: 0.5rem;
 	padding-bottom: 0.5rem;
 	overflow: hidden;
-	transition: max-width 0.1s ease-out, max-height 0.1s ease-out;
+	transition:
+		max-width 0.1s ease-out,
+		max-height 0.1s ease-out;
 	contain: paint;
 
 	:global(.h) {
