--- a/src/ViewEdit.module.scss
+++ b/src/ViewEdit.module.scss
@@ -189,7 +189,9 @@
 	width: 100%;
 	height: 0.75rem;
 	cursor: grab;
-	transition: background-color 0.1s ease-out, border-color 0.1s ease-out;
+	transition:
+		background-color 0.1s ease-out,
+		border-color 0.1s ease-out;
 
 	&:active {
 		cursor: grabbing;
